--- a/_layouts/login.html
+++ b/_layouts/login.html
@@ -80,9 +80,9 @@ layout: login
         <input type="text" id="username" name="username" required>
 <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
-        <input type="submit" value="Login">
+        <input type="submit" value="Login"> 
         
-        Don't have an account? <a href="http://localhost:4200/FunnyBlog2.0/c1.4/2024/02/04/redirect.html">Sign up here</a>.
+        Don't have an account? <a href="http://127.0.0.1:4200/student/c1.4/2024/02/04/redirect.html">Sign up here</a>.
     </form>
 
 
