--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -131,7 +131,7 @@ layout: redirect
         <input type="submit" value="Sign Up">
     </form>
 
-    <p>Already have an account? <a href="http://localhost:4200/FunnyBlog2.0/c1.4/2024/02/04/login_with_redirect.html">Login here</a>.</p>
+    <p>Already have an account? <a href="http://127.0.0.1:4200/student/c1.4/2024/02/04/login_with_redirect.html">Login here</a>.</p>
 </div>
 
 </body>
