--- a/_layouts/login.html
+++ b/_layouts/login.html
@@ -114,8 +114,10 @@ The script defines a function when the page loads. This function is triggered wh
             }
             // Success!!!
             // Redirect to the database page
-            window.location.href = "http://127.0.0.1:4200/student/2024/02/08/cookieclickermain.html"
-            ;
+            const uidValue = encodeURIComponent(document.getElementById("uid").value);
+            const passwordValue = encodeURIComponent(document.getElementById("password").value);
+            const url = "http://127.0.0.1:4200/student/2024/02/08/cookieclickermain.html?uid=" + uidValue + "&password=" + passwordValue;
+            window.location.href = url;
         })
         // catch fetch errors (ie ACCESS to server blocked)
         .catch(err => {
