leaderboard should work

--- a/_layouts/cookieclicker.html
+++ b/_layouts/cookieclicker.html
@@ -351,7 +351,7 @@ updateShopDisplay();
       console.log(temp_uid+"  "+ temp_password)
 
     if (typeof points === 'number' && !isNaN(points)) {
-        const url = 'http://127.0.0.1:8086/api/users/';
+        const url = 'http://127.0.0.1:8086/api/users';
         const body = {
             uid: temp_uid,
             password: temp_password,
@@ -369,6 +369,7 @@ updateShopDisplay();
     };
         const requestOptions = {
             method: 'PUT',
+            mode: 'cors',
             credentials: 'include',
             headers: {
               
@@ -401,5 +402,6 @@ updateShopDisplay();
 
   </script>
   </body>
+
   
 </html>
