--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,10 @@
     <nav>
       <ul>
         <li class="fork"><a href="{{site.baseurl}}/">Home</a></li>
-        <li class="fork"><a href="{{site.baseurl}}/compsci">CompSci</a></li>
         <li class="fork"><a href="{{site.baseurl}}/blogs">Blogs</a></li>
-        <li class="title"><a href="{{site.baseurl}}/help">Help</a></li>
-        <li class="title"><a href="{{ site.github.repository_url }}#readme">View On GitHub</a></li>
+        <li class="title"><a href= "{{site.baseurl}}/2024/02/17/main-hub.html">Main Hub</a></li>
+        <li class="title"><a href= "{{site.baseurl}}/2024/01/30/Loginsystem.html">Login</a></li>
+        <li class="title"><a href= "{{site.baseurl}}/2024/02/23/memes.html">Meme Generator</a></li>
       </ul>
     </nav>
   </div><!-- end header -->
